# Inventory-and-Sales-Tracker

./: .env.example  .gitignore  Dockerfile  Explanatory_Document.md  README-2.md  README.md  coverage.xml  docker-compose.yml  main.py  pyproject.toml  pytest-report.xml  requirements.txt
migrations/: env.py
scripts/: bootstrap_db.py
sql/: 001_init.sql
src/: __init__.py  config.py  db.py  errors.py  logger.py
src/apis/: __init__.py  fuel_types.py  inventory.py  reporting.py  sales.py  schemas.py
src/models/: __init__.py  entities.py
src/modules/: fuel_types_service.py  inventory_service.py  reporting_service.py  sales_service.py
src/utils/: decimal_utils.py
tests/: conftest.py  test_concurrency.py  test_concurrent_price_change.py  test_concurrent_refill_vs_sale.py  test_duplicate_create.py  test_error_payloads.py  test_errors_with_mock.py  test_exact_stock_depletions.py  test_meta_endpoints.py  test_not_found_and_conflicts.py  test_price_locking.py  test_reporting.py  test_sales_pass.py  test_validations.py
